Theme: fix content width on mobile

--- a/themes/FC/assets/css/media.css
+++ b/themes/FC/assets/css/media.css
@@ -82,6 +82,10 @@
     height: calc(100vh - var(--header-height));
   }
 
+  .content {
+    max-width: var(--width);
+  }
+
   .content img:not([popover] img, blockquote img) {
     max-height: calc(var(--width) * 1.25);
   }
